// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextUtil parseMarkings converts empty styleList to leaves 1`] = `
Array [
  Object {
    "text": "",
  },
]
`;

exports[`TextUtil parseMarkings converts styleList to leaves 1`] = `
Array [
  Object {
    "b": true,
    "text": "This",
  },
  Object {
    "i": true,
    "q": true,
    "text": "Text",
  },
  Object {
    "del": true,
    "num": 13,
    "q": true,
    "sup": true,
    "text": "Is",
  },
  Object {
    "children": Array [
      Object {
        "num": 13,
        "sup": true,
        "text": "Form",
      },
    ],
    "href": "mockLink",
    "type": "a",
  },
  Object {
    "children": Array [
      Object {
        "text": "atted",
      },
    ],
    "href": "mockOtherLink",
    "type": "a",
  },
]
`;

exports[`TextUtil parseMarkings converts styleList to leaves 2`] = `
Array [
  Object {
    "b": true,
    "text": "This",
  },
  Object {
    "i": true,
    "q": true,
    "text": "Text",
  },
  Object {
    "del": true,
    "num": 0,
    "q": true,
    "sup": true,
    "text": "Is",
  },
  Object {
    "children": Array [
      Object {
        "num": 0,
        "sup": true,
        "text": "Fo",
      },
      Object {
        "num": -13,
        "sup": true,
        "text": "rm",
      },
      Object {
        "text": "atted",
      },
    ],
    "href": "mockLink",
    "type": "a",
  },
]
`;

exports[`TextUtil parseMarkings creates leaves without styleList 1`] = `
Array [
  Object {
    "text": "ThisTextIsFormatted",
  },
]
`;

exports[`TextUtil slateToOboText converts a text node to a textGroup 1`] = `undefined`;
